--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"dimo333",
+    "subTitle":"我是dimo333，dimo333是我",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/168284093?v=4",
     "GMEEK_VERSION":"last"
 }
