--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"dimo333",
-    "subTitle":"我是dimo333，dimo333是我",
+    "subTitle":"这一部分正在全面更新，预计未来一周内能上传完整",
     "avatarUrl":"https://avatars.githubusercontent.com/u/168284093?v=4",
     "GMEEK_VERSION":"last"
 }
