--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"dimo333",
+    "title":"这一部分正在全面更新，预计未来一周内能上传完整",
     "subTitle":"这一部分正在全面更新，预计未来一周内能上传完整",
     "avatarUrl":"https://avatars.githubusercontent.com/u/168284093?v=4",
     "GMEEK_VERSION":"last"
